--- a/app.json
+++ b/app.json
@@ -16,6 +16,14 @@
      "pyrogram" 
      ], 
      "stack": "container",
+     "addons": [
+      {
+         "options": {
+            "version": "12"
+         },
+         "plan": "heroku-postgresql"
+      }
+   ],
      "env": { 
        "API_ID": { 
          "description": "Get this value from https://my.telegram.org", 
